# scalable-distributed-string-sorting

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cli_options.hpp.in  fuzz.py  options.hpp.in
experiment_suites/: dn_ratio_supermuc.rquick.suite.yaml  dn_ratio_supermuc.suite.yaml  np_ratio.merge_sort.pd.verify.suite.yaml  np_ratio.suite.yaml  np_ratio_supermuc.rquick.suite.yaml  np_ratio_supermuc.suite.yaml  real_world_supermuc.suite.yaml
src/: CMakeLists.txt
src/encoding/: CMakeLists.txt  bit_stream.hpp  delta_stream.hpp  golomb_bit_stream.hpp  golomb_encoding.hpp  integer_compression.hpp  thrill_math.hpp
src/executables/: common_cli.hpp  distributed_sorter.cpp  space_efficient_sorter.cpp  variant_selection.hpp
src/hash/: CMakeLists.txt  xxhash.hpp
src/merge/: CMakeLists.txt  bingmann-lcp_losertree.hpp  lcp_merge.hpp  stringptr.hpp  stringtools.hpp
src/mpi/: CMakeLists.txt  allgather.hpp  allreduce.hpp  alltoall.hpp  alltoall_combined.hpp  alltoall_strings.hpp  big_type.hpp  byte_encoder.hpp  communicator.hpp  environment.cpp  environment.hpp  gather.hpp  is_sorted.hpp  plugin_helpers.hpp  readInput.hpp  read_input.hpp  rotate.hpp  scan.hpp  shift.hpp  synchron.hpp  type_mapper.hpp  warmup.hpp  writeToFile.hpp
src/sorter/: CMakeLists.txt
src/sorter/RQuick/: BinTreeMedianSelection.hpp  RQuick.hpp  RandomBitStore.hpp
src/sorter/RQuick2/: BinTreeMedianSelection.hpp  CMakeLists.txt  RQuick.hpp  RandomBitStore.hpp  Util.hpp  data.hpp
src/sorter/distributed/: CMakeLists.txt  bloomfilter.hpp  duplicateSorting.hpp  duplicate_sorting.hpp  lcp_aware_number_string_splitting.hpp  merge_sort.hpp  merging.hpp  misc.hpp  multi_level.hpp  partition.hpp  permutation.hpp  prefix_doubling.hpp  redistribution.hpp  sample.hpp  samplingStrategies.hpp  space_efficient.hpp  tracker.hpp
src/strings/: CMakeLists.txt  bound.hpp  stringcontainer.hpp  stringptr.hpp  stringset.hpp  stringtools.hpp
src/util/: CMakeLists.txt  are_same.hpp  draw_from_distribution.hpp  drop.hpp  leanNonTimer.hpp  lean_non_timer.hpp  macros.hpp  measurements.hpp  measuringTool.hpp  nonTimer.hpp  non_timer.hpp  random_string_generator.hpp  string.hpp  string_generator.hpp  string_set.cpp  string_set.hpp  structs.hpp  timer.hpp  uint_types.hpp
